select html shifted to home user page fixed minor select css

--- a/public/css/css_dashboard/dashboard_styles.css
+++ b/public/css/css_dashboard/dashboard_styles.css
@@ -624,5 +624,13 @@ footer {
 @media (max-width: 480px) {
     footer {
         font-size: 9px;
+        z-index:1 !important;   
+    }
+    .demo-drawer-header {
+        min-height: 45vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #383838;
     }
 }
